$Id$

2006.11.19 [Olivier]
  * add some missing propoerties in GtkIconView (in module GTree) (2.6)

2006.11.03 [Olivier]
  * move GtkSocket code from ml_gtkbin.c to ml_gtk.c since it is
    wrapped in GWindow.

2006.10.27 [Jacques]
  * add Gdk.Cursor.get_image
  * remove Gdk.Cursor.destroy (could be dangerous)
  * add new methods to GData.clipboard (partly from SooHyoung Oh)

2006.10.13 [Jacques]
  * add GDraw.drawable#colormap,gc,set_gc

2006.09.15 [Olivier]
  * wrap GtkMenuToolButton (2.6)

In lablgtk2-20060908:
2006.08.08 [RobertR]
  * export copy_memblock_indirected and ml_lookup_flags_getter for Windows

2006.07.06 [Jacques]
  * make ABSVALUE=1 to use a custom mlvalues.h where value is abstract

2006.05.13 [Jacques]
  * delay finalization functions when they may trigger a callback

2006.02.03 [Jacques]
  * add GLayout#bin_window

2005.12.19 [Jacques]
  * lablgladecc : apply Keita Yamaguchi's patch

2005.12.02 [Benjalin]
  * lablgladecc : support for GtkAboutDialog

2005.11.10 [Olivier]
  * wrap gtk_tree_view_expand_to_path (2.2)

2005.11.03 [Benjamin]
  * lablgladecc : emit w#toplevel#misc#show_all instead of 
    w#toplevel#show in check_all, because some toplevel widgets (gMenu for example)
    do not have a show method

2005.10.28 [Jacques]
  * add windows support for rsvg

In lablgtk2-20051027 (2.6.0):

2005.10.25 [Jacques]
  * fix GtkThread.sync (Robert Schneck-McConnell)

2005.10.17 [Jacques]
  * new recompilation approach for Windows

2005.10.03 [Olivier]
  * fix refcounting of pixbufs in GdkPixbuf

2005.09.24 [Olivier]
  * wrap gdk_cursor_new_from_pixbuf

2005.08.25 [Olivier]
  * gtk_about_dialog_set_{url,email}_hook are not methods : fix the 
    external type declaration and remove from the GWindow.about_dialog class.

2005.08.18 [Olivier]
  * add special sort_column_id values in GTree to select default sort
    function or disable sorting
  * add a couple of utility functions in Glib :
      - getenv, setenv, unsetenv (2.4)